--- a/src/containers/Misc/BoxCalendar/BoxCalendar.module.css
+++ b/src/containers/Misc/BoxCalendar/BoxCalendar.module.css
@@ -31,11 +31,12 @@
 .Left {
     
     padding: 0px 2px;
-
+    cursor: pointer;
 }
 
 .Right {
     padding: 0px 2px;
+    cursor: pointer;
 }
 
 .Grid {
@@ -71,4 +72,9 @@
     cursor: pointer;
     position: relative;
     outline: none;
+}
+
+.DatesMarked {
+    color: black;
+    font-weight: 600
 }
