--- a/src/components/HeaderComponents/HeaderIcon/HeaderIcon.module.css
+++ b/src/components/HeaderComponents/HeaderIcon/HeaderIcon.module.css
@@ -20,3 +20,10 @@
     width: 24px;
     cursor: pointer;
 }
+
+.Hamburger {
+    width: 20px;
+    height: 2px;
+    background-color: black;
+    margin: 3px 0;
+}
