--- a/src/containers/Misc/AddEvent/AddEvent.module.css
+++ b/src/containers/Misc/AddEvent/AddEvent.module.css
@@ -1,12 +1,25 @@
+.HeaderContainer {
+    display: flex
+}
+
+.divFloat {
+    padding: 10px;
+}
+
+.cursor {
+    cursor: pointer;
+}
+
 .InputLabel {
     height: 44px;
     display: block;
     /* height: 36px; */
     position: relative;
-    vertical-align: top;
+    /* vertical-align: top; */
     cursor: default;
     padding: 10px;
 }
+
 
 .InputDiv {
     top: 8px;
@@ -56,8 +69,9 @@
     margin: 0;
     min-width: 0%;
     outline: none;
-    padding: 0;
+    padding: 0px 10px;
     z-index: 0;
+    height: 60px;
 }
 
 .OtherInputContainers {
@@ -186,6 +200,7 @@
     display: flex;
     -webkit-align-items: center;
     align-items: center;
+    margin-bottom: 15px; 
 }
 
 .paddingFive {
@@ -193,7 +208,7 @@
 }
 
 .Submit {
-    margin-left: 16px;
+    margin-left: 10px;
     height: 32px;
     -webkit-flex-shrink: 0;
     flex-shrink: 0;
